@@ -1,3 +1,10 @@
+2011-12-16  Sebastien Binet  <sebastien.binet@cern.ch>
+
+	* tagging PyUtils-00-11-16
+	* fix bug 89667: c++ impl. for DsoDb and dont screw up tpcnv
+	  generation. ie: load the reflex dict for reflex.
+	* M python/Dso.py
+
 2011-12-15  Sebastien Binet  <sebastien.binet@cern.ch>
 
 	* tagging PyUtils-00-11-15
